# yolo-dataset-quality-analysis

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  CLAUDE.md  README.md  REFACTORING_SUMMARY.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  zensical.toml
.github/: dependabot.yml
.github/workflows/: autofix.yml  cd.yml  ci.yml  docs.yml  format.yml
cfg/: default.yaml
docs/: architecture.md  configuration.md  contributing.md  embeddings.md  index.md  installation.md  reference.md  tasks.md  usage.md
images/: voxel_ui.avif
images/icons/: image-adjuster.avif
plugins/image-adjuster/: __init__.py  package-lock.json
src/: config.py  dataset.py  embeddings.py  enum.py  images.py  logger.py  voxel51.py
src/core/: config.py  constants.py  enums.py
src/dataset/: converter.py  loader.py  metadata.py  parser.py
src/embeddings/: computer.py  preprocessing.py
src/utils/: logger.py  path_utils.py  plugins.py
src/visualization/: fiftyone_ops.py  iou.py  quality.py  thumbnails.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: .gitignore  __init__.py  dataset_manager.py
tests/integration/: test_conversion_pipeline.py  test_dataset_fixtures.py  test_embeddings_pipeline.py  test_loading_pipeline.py  test_parser_integration.py
yolo_scout/: __init__.py  __main__.py  cli.py  yolo_entry.py
yolo_scout/cfg/: default.yaml
yolo_scout/core/: config.py  constants.py
yolo_scout/dataset/: converter.py  loader.py  metadata.py  parser.py  resolvers.py
yolo_scout/embeddings/: computer.py  (+1 more)
(+16 files in other folders)
