[project]
name = "yolo-dataset-quality-analysis"
version = "0.1.0"
description = "YOLO Dataset Quality Analysis Tool"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "fiftyone>=1.13.4",
    "open_clip_torch>=3.3.0",
    "transformers>=4.57.6",
    "timm>=1.0.25",
    "numpy>=2.0.2",
    "Pillow>=11.3.0",
    "shapely>=2.0.7",
    "PyYAML>=6.0.3",
    "tqdm>=4.67.3",
    "umap-learn>=0.5.11",
    "opencv-python-headless>=4.13.0.92",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyrefly",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "integration: integration tests",
    "unit: unit tests",
    "requires_dataset: marks tests that require dataset download",
]
addopts = "--strict-markers --tb=short -v"

[tool.ruff]
line-length = 120
